--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -8,4 +8,18 @@
   <pre id="output"></pre>
   <script src="script.js"></script>
 </body>
+  <body>
+  <h1>Predecessor Live Stats</h1>
+
+  <form id="player-form">
+    <input type="text" id="player-id-input" placeholder="Enter Player ID" />
+    <button type="submit">Search</button>
+  </form>
+
+  <h2 id="player-header"></h2>
+  <div id="output"></div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
