--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Predecessor Stats</title>
-</head>
+</head> Predecessor Live Stats </head>
 <body>
   <h1>Live Match Stats</h1>
   <pre id="output"></pre>
   <script src="script.js"></script>
 </body>
   <body>
-  <h1>Predecessor Live Stats</h1>
 
   <form id="player-form">
     <input type="text" id="player-id-input" placeholder="Enter Player ID" />
@@ -21,5 +18,13 @@
 
   <script src="script.js"></script>
 </body>
+  <h1>Search Player Stats</h1>
+<form id="player-form">
+  <input type="text" id="player-id-input" placeholder="Enter Player ID" />
+  <button type="submit">Search</button>
+</form>
+
+<div id="player-output"></div>
+
 
 </html>
