--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -1,138 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Predecessor Player Stats</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body class="bg-gray-100 text-gray-800 min-h-screen p-4">
-  <div class="max-w-4xl mx-auto">
-    <h1 class="text-3xl font-bold mb-6 text-center">🔍 Predecessor Player Stats</h1>
-
-    <div class="mb-6">
-      <label for="playerId" class="block text-sm font-medium text-gray-700">Enter Player ID:</label>
-      <div class="flex gap-2 mt-2">
-        <input id="playerId" type="text" placeholder="Player UUID..." class="flex-1 px-3 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300"/>
-        <button onclick="loadHistory()" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Search</button>
-      </div>
-    </div>
-
-    <div id="error" class="text-red-600 mb-4 hidden"></div>
-
-    <h2 class="text-2xl font-semibold mb-4">Match History</h2>
-    <div id="matchHistory" class="space-y-4"></div>
-
-    <h2 class="text-2xl font-semibold mt-10 mb-4">📊 KDA Over Time</h2>
-    <canvas id="kdaChart" height="100"></canvas>
-  </div>
-
-  <script>
-    const errorBox = document.getElementById('error');
-    let kdaChart;
-
-    async function loadHistory() {
-      const playerId = document.getElementById('playerId').value.trim();
-      if (!playerId) return;
-
-      localStorage.setItem('playerId', playerId);
-      const res = await fetch(`/api/player/${playerId}/history`);
-      const container = document.getElementById('matchHistory');
-      container.innerHTML = '';
-      errorBox.classList.add('hidden');
-
-      if (!res.ok) {
-        errorBox.textContent = 'Player not found or server error.';
-        errorBox.classList.remove('hidden');
-        return;
-      }
-
-      const matches = await res.json();
-      if (!matches.length) {
-        container.innerHTML = '<p class="text-gray-500">No matches found for this player.</p>';
-        return;
-      }
-
-      const kdaData = [];
-      const labels = [];
-
-      matches.forEach(match => {
-        const div = document.createElement('div');
-        div.className = "bg-white p-4 rounded shadow flex gap-4";
-
-        const heroIconUrl = match.hero_icon || `https://cdn.omeda.city/heroes/${match.hero_id || 'unknown'}.webp`;
-
-        div.innerHTML = `
-          <img src="${heroIconUrl}" alt="${match.hero_name}" class="w-16 h-16 rounded-full object-cover border"/>
-          <div class="flex-1">
-            <div class="flex justify-between items-center mb-2">
-              <h3 class="font-semibold text-lg">${match.hero_name || 'Unknown Hero'}</h3>
-              <span class="${match.victory ? 'text-green-600' : 'text-red-600'} font-bold">
-                ${match.victory ? 'Victory' : 'Defeat'}
-              </span>
-            </div>
-            <div class="grid grid-cols-2 gap-2 text-sm text-gray-700">
-              <div><strong>K/D/A:</strong> ${match.kills}/${match.deaths}/${match.assists}</div>
-              <div><strong>Gold:</strong> ${match.gold}</div>
-              <div><strong>Damage:</strong> ${match.damage_done}</div>
-              <div><strong>Date:</strong> ${new Date(match.created_at).toLocaleDateString()}</div>
-            </div>
-          </div>
-        `;
-
-        container.appendChild(div);
-
-        // prepare chart data
-        const kda = (match.kills + match.assists) / Math.max(match.deaths, 1);
-        kdaData.push(kda.toFixed(2));
-        labels.push(new Date(match.created_at).toLocaleDateString());
-      });
-
-      // Render KDA Chart
-      const ctx = document.getElementById('kdaChart').getContext('2d');
-      if (kdaChart) kdaChart.destroy();
-      kdaChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [{
-            label: 'KDA Ratio',
-            data: kdaData,
-            borderColor: 'rgba(59, 130, 246, 1)',
-            backgroundColor: 'rgba(59, 130, 246, 0.2)',
-            fill: true,
-            tension: 0.3
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: { display: true },
-            tooltip: { mode: 'index', intersect: false }
-          },
-          scales: {
-            y: {
-              beginAtZero: true,
-              title: { display: true, text: 'KDA Ratio' }
-            },
-            x: {
-              title: { display: true, text: 'Match Date' }
-            }
-          }
-        }
-      });
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #121212;
+      color: #fff;
+      margin: 0;
+      padding: 0;
     }
 
-    // Load from localStorage on load
-    window.onload = () => {
-      const savedId = localStorage.getItem('playerId');
-      if (savedId) {
-        document.getElementById('playerId').value = savedId;
-        loadHistory();
-      }
-    };
-  </script>
+    .container {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    form {
+      margin-bottom: 2rem;
+    }
+
+    input {
+      padding: 0.5rem;
+      width: 60%;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: none;
+    }
+
+    button {
+      padding: 0.6rem 1rem;
+      font-size: 1rem;
+      background-color: #1e88e5;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      margin-left: 0.5rem;
+      cursor: pointer;
+    }
+
+    #results {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+
+    .match-card {
+      display: flex;
+      align-items: center;
+      background: #1f1f1f;
+      padding: 1rem;
+      border-radius: 8px;
+      gap: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    .avatar {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    canvas {
+      margin-top: 2rem;
+      background-color: #fff;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Predecessor Player Stats</h1>
+    <form id="playerForm">
+      <input type="text" id="playerId" placeholder="Enter Player ID" required>
+      <button type="submit">Search</button>
+    </form>
+
+    <canvas id="kdaChart" width="600" height="300"></canvas>
+
+    <div id="results"></div>
+  </div>
+
+  <!-- Chart.js from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Main App Script -->
+  <script src="script.js"></script>
 </body>
 </html>
