--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -2,29 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Predecessor Player Stats</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Predecessor Stats</title>
   <link rel="stylesheet" href="styles.css" />
-  <script src="script.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>Predecessor Stats Viewer</h1>
-
+    <h1>Predecessor Player Stats</h1>
     <form id="playerForm">
       <input type="text" id="playerId" placeholder="Enter Player ID" required />
       <button type="submit">Search</button>
     </form>
-
-    <div id="results" class="results-section">
-      <!-- Match cards will go here -->
-    </div>
-
-    <div class="chart-container">
-      <canvas id="kdaChart" width="600" height="300"></canvas>
-    </div>
+    <div id="results"></div>
+    <canvas id="kdaChart" width="400" height="200"></canvas>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
