--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Predecessor Player Stats</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -14,7 +15,7 @@
       <button type="submit">Search</button>
     </form>
     <div id="results"></div>
-    <canvas id="kdaChart" width="400" height="200"></canvas>
+    <canvas id="kdaChart" width="600" height="300"></canvas>
   </div>
   <script src="script.js"></script>
 </body>
