--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Predecessor Player Stats</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Predecessor Stats Viewer</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -12,10 +12,10 @@
     <h1>Predecessor Player Stats</h1>
     <form id="playerForm">
       <input type="text" id="playerId" placeholder="Enter Player ID" required />
-      <button type="submit">Search</button>
+      <button type="submit">Get Stats</button>
     </form>
     <div id="results"></div>
-    <canvas id="kdaChart" width="600" height="300"></canvas>
+    <canvas id="kdaChart" width="400" height="200"></canvas>
   </div>
   <script src="script.js"></script>
 </body>
