--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Predecessor Player Stats</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>Predecessor Stats Viewer</title>
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Predecessor Player Match History</h1>
+  <main>
+    <h1>Predecessor Player Stats</h1>
     <form id="playerForm">
-      <input type="text" id="playerId" placeholder="Enter Player ID" required />
-      <button type="submit">Search</button>
+      <input type="text" id="playerName" placeholder="Enter Player Name" required>
+      <button type="submit">Get Stats</button>
     </form>
     <div id="results"></div>
-    <canvas id="kdaChart"></canvas>
-  </div>
+    <canvas id="kdaChart" width="400" height="200"></canvas>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
