--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -18,6 +18,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
