--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -2,22 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Predecessor Live Stats</title>
+  <title>Predecessor Player Stats</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Predecessor Live Stats</h1>
-    <form id="player-form">
-      <input type="text" id="player-input" placeholder="Enter player name" required />
-      <button type="submit">Get Stats</button>
-    </form>
-    <div id="result"></div>
-    <canvas id="kda-chart"></canvas>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js" defer></script>
+  <h1>Predecessor Player Stats</h1>
+  <form id="player-form">
+    <input id="player-name" placeholder="Enter player name..." />
+    <button type="submit">Get Stats</button>
+  </form>
+  <div id="result"></div>
+  <script src="script.js"></script>
 </body>
 </html>
