--- a/predecessor-live/public/index.html
+++ b/predecessor-live/public/index.html
@@ -8,8 +8,11 @@
 <body>
   <h1>Predecessor Player Stats</h1>
   <form id="player-form">
-    <input id="player-name" placeholder="Enter player name..." />
-    <button type="submit">Get Stats</button>
+  <input type="text" id="player-input" placeholder="Enter player name" required />
+  <button type="submit">Get Stats</button>
+</form>
+<div id="result"></div>
+<canvas id="kda-chart"></canvas>
   </form>
   <div id="result"></div>
   <script src="script.js"></script>
